[gd_scene load_steps=5 format=3 uid="uid://c52ucxsx3c1o3"]

[ext_resource type="Script" path="res://scenes/components/lights/metal-wall-lamp/glow/MetalWallLampGlow.gd" id="1_1wgfs"]

[sub_resource type="Animation" id="Animation_dkvf8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="Animation" id="Animation_4upws"]
resource_name = "blink"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1, 1.4, 2.1, 2.5, 3.1, 3.7, 4.5, 5),
"transitions": PackedFloat32Array(2, 2, 0.5, 2, 0.5, 0.5, 2, 2, 0.5, 0.5),
"update": 0,
"values": [3.0, 4.0, 6.0, 4.0, 5.0, 3.0, 4.5, 5.0, 6.0, 3.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0wtd1"]
_data = {
"RESET": SubResource("Animation_dkvf8"),
"blink": SubResource("Animation_4upws")
}

[node name="MetalWallLampGlow" type="OmniLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00641613, -0.252453, 0.488596)
light_energy = 5.0
light_bake_mode = 1
omni_range = 5.14063
script = ExtResource("1_1wgfs")
metadata/_edit_lock_ = true

[node name="Start" type="Timer" parent="."]
one_shot = true

[node name="Blink" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0wtd1")
}

[connection signal="timeout" from="Start" to="." method="_on_start_timeout"]
[connection signal="animation_finished" from="Blink" to="." method="_on_blink_animation_finished"]
